# alacritty

./: CHANGELOG.md  Cargo.toml
alacritty/: Cargo.toml
alacritty/src/: display.rs  url.rs
alacritty/src/renderer/: mod.rs
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/: index.rs  lib.rs  text_run.rs
alacritty_terminal/src/term/: color.rs  mod.rs
font/: Cargo.toml
font/src/directwrite/: mod.rs
font/src/ft/: mod.rs
